packages/core-macro/tests/rsx/trailing-comma-0.stderr
error: Attributes must be separated by commas
 --> tests/rsx/trailing-comma-0.rs:9:13
  |
9 |             class: "foo bar"
  |             ^^^^^
  |
  = help: Did you forget a comma?
